--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 resolver = "2"
-members = [
-	"simd_find_char"
+members = [ "find_non_escaped_quote",
+	"simd_find_char",
+	"find_non_escaped_quote"
 ]
 
 [workspace.dependencies]
